# Violet-Codes.github.io

./: .gitignore  .pnp.cjs  README.md  asset-manifest.json  colors.txt  index.html  manifest.json  package-lock.json  package.json  precache-manifest.1f35da718e61edf6e52d5eb709834202.js  precache-manifest.6885cb437e3e6c50a9ff564e657ad3d5.js  precache-manifest.f39d2d2e46aff0fa40e198bccc3da733.js  service-worker.js  style.bash  style.sass
brainfuck-optimiser-wasm-bindgen/: Cargo.toml
brainfuck-optimiser-wasm-bindgen/src/: lib.rs
frontend/about/: package-lock.json  package.json
public/: index.html
src/: App.tsx  Blog.tsx  Counter.tsx  Dropdown.tsx  Extras.tsx  Image.tsx  MaterialIcons.tsx  Navbar.tsx  Nugget.tsx  Pfp.tsx  Project.tsx  Util.ts  Util.tsx  index.tsx  style.css  style.sass
src/Blogs/: BlogView.tsx  MonadsForTheLayman.tsx
src/Projects/: BrainfuckOptimiser.tsx  Interactive.tsx  VioletCodes.tsx
static/css/: 2.3b6af6ca.chunk.css  2.3b6af6ca.chunk.css.map  2.ef984da1.chunk.css  2.ef984da1.chunk.css.map  main.1bb33089.css  main.1bb33089.css.map  main.2e975bdd.css  main.2e975bdd.css.map  main.78567a75.css  main.78567a75.css.map
static/js/: 1.adb2852f.chunk.js  1.adb2852f.chunk.js.map  2.52e1a59a.chunk.js  2.52e1a59a.chunk.js.map  2.938137af.chunk.js  2.938137af.chunk.js.map  2.bc5ae7b2.chunk.js  2.bc5ae7b2.chunk.js.map  3.4f83f070.chunk.js  3.4f83f070.chunk.js.map  3.cce98eaa.chunk.js  3.cce98eaa.chunk.js.map  787.1cf30356.chunk.js  787.1cf30356.chunk.js.map  787.fceaaef4.chunk.js  787.fceaaef4.chunk.js.map  main.2db52360.chunk.js  main.3362f858.chunk.js  (+25 more)
(+2 files in other folders)
