[package]
name = "brainfuck-optimiser-wasm-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck-optimiser = { git = "https://github.com/Violet-Codes/brainfuck-optimiser" }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib", "rlib"]
